...
                        </prototypes>
                        <connections>
                            <outlet property="dataSource" destination="dj9-FG-oXY" id="pCT-NC-cQZ"/>
                            <outlet property="delegate" destination="dj9-FG-oXY" id="sTJ-Y1-6KG"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Choose your Appetizer" id="LGo-Pd-1Ub">
                        <barButtonItem key="rightBarButtonItem" title="Login" width="10" springLoaded="YES" style="done" id="bix-vN-VFX">
                            <color key="tintColor" systemColor="tintColor"/>
                            <connections>
                                <segue destination="Z1e-98-HJ6" kind="show" id="9DS-JI-mmD"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
...
                                            <constraint firstAttribute="width" relation="lessThanOrEqual" constant="1200" id="z7Z-Ho-bSh"/>
                                        </constraints>
                                    </imageView>
                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="0CA-ta-m92">
                                        <rect key="frame" x="0.0" y="307" width="994" height="80"/>
                                        <subviews>
                                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" verticalHuggingPriority="249" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Username" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="0BI-h3-p3h">
                                                <rect key="frame" x="0.0" y="0.0" width="994" height="35"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                <textInputTraits key="textInputTraits"/>
                                            </textField>
                                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="9jb-ac-87B">
                                                <rect key="frame" x="0.0" y="45" width="994" height="35"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                                            </textField>
                                        </subviews>
                                        <constraints>
...
                                    <button opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="249" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eoV-Hr-ckc">
                                        <rect key="frame" x="0.0" y="394" width="994" height="40"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="40" id="q3H-0c-efQ"/>
                                        </constraints>
                                        <state key="normal" title="Button"/>
                                        <buttonConfiguration key="configuration" style="filled" title="Log in"/>
                                        <connections>
                                            <action selector="loginTapped:" destination="Z1e-98-HJ6" eventType="touchUpInside" id="rtG-uD-QuR"/>
                                        </connections>
                                    </button>
                                </subviews>
                            </stackView>
...
