...
        navigationController?.popViewController(animated: true) // Pop the current view controller from the navigation stack
        UserDefaults.standard.set(true, forKey: "loggedIn") // Set the "loggedIn" flag in UserDefaults to true
    }
    
    // Delegate method called to show an alert
    func showAlert(title: String) {
        let alertController = UIAlertController(title: "Oops", message: title, preferredStyle: .alert)
        let alertAction = UIAlertAction(title: "OK", style: .default, handler: nil)
        alertController.addAction(alertAction)
        present(alertController, animated: true, completion: nil)
    }
}

