...
                  let recipe = viewModel.getRecipe(at: indexPath.row) else {
                return // Return if the destination or recipe is not found
            }
            
            // Force the user to log in first
            if !UserDefaults.standard.bool(forKey: "loggedIn") {
                showError(message: "We can't proceed to details as you didn't log in") // Show an error message if the user is not logged in
            } else {
                // Pass the recipe details to the detail view controller
                destinationController.viewModel = RecipeDetailVM(recipe: recipe)
            }
        }
    }
...
